--- a/sandbox/exploring_crds.ipynb
+++ b/sandbox/exploring_crds.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b19d78387794da2ab43843d2f57a7b6",
+       "model_id": "99117513190b4621b8741b7ed9dd7b44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,37 +37,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7dc3098f-65b3-4d1d-9bf4-4d1051a10f8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lipid = omem.lipid.get_random_lipid('POPC', 100)"
+    "#lipid = omem.lipid.get_random_lipid('POPC', 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe04047d-2577-4ef3-8843-b3ed6a731f2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = '../attic/popc/conf1/popc_1.crd'\n",
+    "filename = '../omembrane/data/popc/popc.psf'\n",
     "lipid = msm.convert(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eb53c937-e7e8-4a67-9f78-e3e0cbd37d92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:12<00:00,  4.06it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "for ii in tqdm(range(2, 1000)):\n",
-    "    filename = '../attic/popc/conf1/popc_'+str(ii)+'.crd'\n",
+    "for ii in tqdm(range(1, 50)):\n",
+    "    filename = '../omembrane/data/popc/charmmgui/conf1/popc_'+str(ii)+'.crd'\n",
     "    aux_lipid = msm.convert(filename)\n",
     "    #coordinates = msm.get(aux_lipid, coordinates=True)\n",
     "    msm.append_structures(lipid, aux_lipid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d68b64c8-158f-453a-a6a6-9645f43f965d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_289bd\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_289bd_level0_col0\" class=\"col_heading level0 col0\" >form</th>\n",
+       "      <th id=\"T_289bd_level0_col1\" class=\"col_heading level0 col1\" >n_atoms</th>\n",
+       "      <th id=\"T_289bd_level0_col2\" class=\"col_heading level0 col2\" >n_groups</th>\n",
+       "      <th id=\"T_289bd_level0_col3\" class=\"col_heading level0 col3\" >n_components</th>\n",
+       "      <th id=\"T_289bd_level0_col4\" class=\"col_heading level0 col4\" >n_chains</th>\n",
+       "      <th id=\"T_289bd_level0_col5\" class=\"col_heading level0 col5\" >n_molecules</th>\n",
+       "      <th id=\"T_289bd_level0_col6\" class=\"col_heading level0 col6\" >n_entities</th>\n",
+       "      <th id=\"T_289bd_level0_col7\" class=\"col_heading level0 col7\" >n_lipids</th>\n",
+       "      <th id=\"T_289bd_level0_col8\" class=\"col_heading level0 col8\" >n_structures</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_289bd_row0_col0\" class=\"data row0 col0\" >molsysmt.MolSys</td>\n",
+       "      <td id=\"T_289bd_row0_col1\" class=\"data row0 col1\" >134</td>\n",
+       "      <td id=\"T_289bd_row0_col2\" class=\"data row0 col2\" >1</td>\n",
+       "      <td id=\"T_289bd_row0_col3\" class=\"data row0 col3\" >1</td>\n",
+       "      <td id=\"T_289bd_row0_col4\" class=\"data row0 col4\" >1</td>\n",
+       "      <td id=\"T_289bd_row0_col5\" class=\"data row0 col5\" >1</td>\n",
+       "      <td id=\"T_289bd_row0_col6\" class=\"data row0 col6\" >1</td>\n",
+       "      <td id=\"T_289bd_row0_col7\" class=\"data row0 col7\" >1</td>\n",
+       "      <td id=\"T_289bd_row0_col8\" class=\"data row0 col8\" >49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f1a65bee980>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msm.info(lipid)"
    ]
   },
   {
