--- a/sandbox/Build_POPC_membrane_2.ipynb
+++ b/sandbox/Build_POPC_membrane_2.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9ddef09c-95d2-4d46-898d-5535600b08de",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e81a3b6efba48adb2f396d19ca0d612",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import molsysmt as msm\n",
     "from molsysmt import pyunitwizard as puw\n",
@@ -35,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "da0e7600-4014-424f-a7cf-66c82bc18eb3",
    "metadata": {},
    "outputs": [],
@@ -45,55 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aef0f1e0-a5c3-427d-bfbc-78874fdb23e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_7fa70\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th id=\"T_7fa70_level0_col0\" class=\"col_heading level0 col0\" >form</th>\n",
-       "      <th id=\"T_7fa70_level0_col1\" class=\"col_heading level0 col1\" >n_atoms</th>\n",
-       "      <th id=\"T_7fa70_level0_col2\" class=\"col_heading level0 col2\" >n_groups</th>\n",
-       "      <th id=\"T_7fa70_level0_col3\" class=\"col_heading level0 col3\" >n_components</th>\n",
-       "      <th id=\"T_7fa70_level0_col4\" class=\"col_heading level0 col4\" >n_chains</th>\n",
-       "      <th id=\"T_7fa70_level0_col5\" class=\"col_heading level0 col5\" >n_molecules</th>\n",
-       "      <th id=\"T_7fa70_level0_col6\" class=\"col_heading level0 col6\" >n_entities</th>\n",
-       "      <th id=\"T_7fa70_level0_col7\" class=\"col_heading level0 col7\" >n_waters</th>\n",
-       "      <th id=\"T_7fa70_level0_col8\" class=\"col_heading level0 col8\" >n_lipids</th>\n",
-       "      <th id=\"T_7fa70_level0_col9\" class=\"col_heading level0 col9\" >n_structures</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td id=\"T_7fa70_row0_col0\" class=\"data row0 col0\" >molsysmt.MolSys</td>\n",
-       "      <td id=\"T_7fa70_row0_col1\" class=\"data row0 col1\" >64243</td>\n",
-       "      <td id=\"T_7fa70_row0_col2\" class=\"data row0 col2\" >12681</td>\n",
-       "      <td id=\"T_7fa70_row0_col3\" class=\"data row0 col3\" >12681</td>\n",
-       "      <td id=\"T_7fa70_row0_col4\" class=\"data row0 col4\" >3</td>\n",
-       "      <td id=\"T_7fa70_row0_col5\" class=\"data row0 col5\" >12681</td>\n",
-       "      <td id=\"T_7fa70_row0_col6\" class=\"data row0 col6\" >1</td>\n",
-       "      <td id=\"T_7fa70_row0_col7\" class=\"data row0 col7\" >12481</td>\n",
-       "      <td id=\"T_7fa70_row0_col8\" class=\"data row0 col8\" >200</td>\n",
-       "      <td id=\"T_7fa70_row0_col9\" class=\"data row0 col9\" >1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fd24f4353c0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "msm.info(molsys)"
    ]
@@ -104,7 +46,30 @@
    "id": "c6b5b35e-3def-423c-8a81-a292d3789744",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "P_atoms = msm.select(molsys, selection='atom_type==\"P\" and molecule_type==\"lipid\"')\n",
+    "N_atoms = msm.select(molsys, selection='atom_type==\"N\" and molecule_type==\"lipid\"')\n",
+    "C_atoms = msm.select(molsys, selection='atom_type==\"C\" and molecule_type==\"lipid\"')\n",
+    "OW_atoms = msm.select(molsys, selection='atom_type==\"O\" and molecule_type==\"water\"')\n",
+    "\n",
+    "bins_edges_P_init, density_P_init = omem.analysis.get_lineal_density(molsys, selection = P_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "bins_edges_N_init, density_N_init = omem.analysis.get_lineal_density(molsys, selection = N_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "bins_edges_C_init, density_C_init = omem.analysis.get_lineal_density(molsys, selection = C_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "\n",
+    "bins_edges_OW_init, density_OW_init = omem.analysis.get_lineal_density(molsys, selection=OW_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (6,4)\n",
+    "plt.plot((bins_edges_P_init[1:]+bins_edges_P_init[:-1])/2, density_P_init)\n",
+    "plt.plot((bins_edges_N_init[1:]+bins_edges_N_init[:-1])/2, density_N_init)\n",
+    "plt.plot((bins_edges_C_init[1:]+bins_edges_C_init[:-1])/2, density_C_init)\n",
+    "plt.plot((bins_edges_OW_init[1:]+bins_edges_OW_init[:-1])/2, density_OW_init)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msm.molecular_mechanics.get_potential_energy(context)"
+    "#msm.molecular_mechanics.get_potential_energy(context)"
    ]
   },
   {
@@ -153,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LocalEnergyMinimizer.minimize(context)"
+    "#LocalEnergyMinimizer.minimize(context)"
    ]
   },
   {
@@ -163,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msm.molecular_mechanics.get_potential_energy(context)"
+    "#msm.molecular_mechanics.get_potential_energy(context)"
    ]
   },
   {
@@ -179,10 +144,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb2c27b0-731a-4fc5-9d72-34b6b78495ce",
+   "id": "53680ddc-0490-46aa-afbd-12449f5211e1",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2c27b0-731a-4fc5-9d72-34b6b78495ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shifts_P = msm.structure.get_distances(molecular_system=state_init, molecular_system_2=state_end,\n",
+    "                                       selection=P_atoms, pairs=True, pbc=True)\n",
+    "shifts_N = msm.structure.get_distances(molecular_system=state_init, molecular_system_2=state_end,\n",
+    "                                       selection=N_atoms, pairs=True, pbc=True)\n",
+    "shifts_C = msm.structure.get_distances(molecular_system=state_init, molecular_system_2=state_end,\n",
+    "                                       selection=C_atoms, pairs=True, pbc=True)\n",
+    "shifts_OW = msm.structure.get_distances(molecular_system=state_init, molecular_system_2=state_end,\n",
+    "                                       selection=OW_atoms, pairs=True, pbc=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa282a45-4f18-4d28-b2ee-d1c3c5c984b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_P, bins = np.histogram(puw.get_value(shifts_P[0]), range=[0.0, 1.0], bins=20, density=True)\n",
+    "h_N, bins = np.histogram(puw.get_value(shifts_N[0]), range=[0.0, 1.0], bins=20, density=True)\n",
+    "h_C, bins = np.histogram(puw.get_value(shifts_C[0]), range=[0.0, 1.0], bins=20, density=True)\n",
+    "h_OW, bins = np.histogram(puw.get_value(shifts_OW[0]), range=[0.0, 1.0], bins=20, density=True)\n",
+    "plt.plot(0.5*(bins[1:]+bins[:-1]), h_P)\n",
+    "plt.plot(0.5*(bins[1:]+bins[:-1]), h_N)\n",
+    "plt.plot(0.5*(bins[1:]+bins[:-1]), h_C)\n",
+    "plt.plot(0.5*(bins[1:]+bins[:-1]), h_OW)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a2fbdb8-dbad-4573-bfd5-e4af1e25ced3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins_edges_P_end, density_P_end = omem.analysis.get_lineal_density(state_end, selection = P_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "bins_edges_N_end, density_N_end = omem.analysis.get_lineal_density(state_end, selection = N_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "bins_edges_C_end, density_C_end = omem.analysis.get_lineal_density(state_end, selection = C_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "\n",
+    "bins_edges_OW_end, density_OW_end = omem.analysis.get_lineal_density(state_end, selection=OW_atoms, axis = [0,0,1],\n",
+    "                                                       bins = 80, range=\"[-6.0, 6.0] nm\", normalized=True)\n",
+    "\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (6,4)\n",
+    "plt.plot((bins_edges_P_end[1:]+bins_edges_P_end[:-1])/2, density_P_end)\n",
+    "plt.plot((bins_edges_N_end[1:]+bins_edges_N_end[:-1])/2, density_N_end)\n",
+    "plt.plot((bins_edges_C_end[1:]+bins_edges_C_end[:-1])/2, density_C_end)\n",
+    "plt.plot((bins_edges_OW_end[1:]+bins_edges_OW_end[:-1])/2, density_OW_end)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
