--- a/sandbox/Build_POPC_membrane_1.ipynb
+++ b/sandbox/Build_POPC_membrane_1.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e99a54e2-6928-4c48-a83a-8de21f8bba6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5bd79b4716c44d5998da2c661a8d3f4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import molsysmt as msm\n",
     "from molsysmt import pyunitwizard as puw\n",
